# agent-crewAI

deving/: 01_crewai_architecture.md  02_dynamic_creation.md  03_human_review.md  04_framework_comparison.md  05_delegation_mechanism.md  06_hooks_system.md  README.md
lib/crewai/src/crewai/experimental/: agent_executor.py
lib/crewai/src/crewai/llms/providers/openai/: completion.py
prac/story_writer_crew/: .env.example  .gitignore  MEMORY_SETUP.md  PROJECT_OVERVIEW.md  README.md  USAGE_GUIDE.md  pyproject.toml  story_draft.md  story_final.md
prac/story_writer_crew/src/story_writer_crew/: __init__.py  crew.py  main.py
prac/story_writer_crew/src/story_writer_crew/config/: agents.yaml  tasks.yaml
prac/story_writer_crew/src/story_writer_crew/tools/: __init__.py  custom_tool.py
